changes filename by their slug

--- a/app/views/pages/more-visitors-more-sales-more-often.html.liquid
+++ b/app/views/pages/more-visitors-more-sales-more-often.html.liquid
@@ -2,7 +2,7 @@
 slug: more-visitors-more-sales-more-often
 layout_name: 1col
 metadata:
-  pagetitle: A successful website seeks a successful business
+  pagetitle: More Visitors. More sales. More often.
 ---
 
 <h1>{{ context.page.metadata.pagetitle }}</h1>
