blog detail page

--- a/app/views/pages/mobile-responsive-design.html.liquid
+++ b/app/views/pages/mobile-responsive-design.html.liquid
@@ -1,6 +1,6 @@
 ---
 slug: mobile-responsive-design
-layout_name: 1col
+layout_name: blog-detail
 metadata:
   pagetitle: Mobile Responsive Design
 ---
