update home page

--- a/app/views/pages/lerning.html.liquid
+++ b/app/views/pages/lerning.html.liquid
@@ -1,5 +1,5 @@
 ---
-slug: /
+slug: learning
 layout_name: my_custom_layout
 metadata:
   pagetitle: PlatformOS Learning
@@ -19,4 +19,5 @@ metadata:
 	<li><a href="/redirect" target="_blank">Redirect</a></li>
 	<li><a href="/where-am-i" target="_blank">Error 404</a></li>
 	<li><a href="/context">Context Variable</a></li>
+	<li><a href="/translations">Translations</a></li>
 </ol>
