--- a/app/views/pages/home.html.liquid
+++ b/app/views/pages/home.html.liquid
@@ -3,6 +3,7 @@ slug: /
 layout_name: ooc_home
 metadata:
     pagetitle: Digital Marketing Strategy Specialist
+    title: Home
 ---
 <div class="banner">
   <div class="wrapIt">
