--- a/app/views/partials/layout/ooc_head.liquid
+++ b/app/views/partials/layout/ooc_head.liquid
@@ -1,6 +1,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Digital Marketing Strategy Specialists - One Orange Cow</title>
-<link type="text/css" href="/StyleSheets/ModuleStyleSheets.css" rel="StyleSheet" />
+<link type="text/css" href="{{ 'styles/ooc_css/ModuleStyleSheets.css' | asset_url }}" rel="StyleSheet" />
 <script type="text/javascript">
 var jslang = 'EN';
 </script>
