--- a/app/views/layouts/ooc_page.html.liquid
+++ b/app/views/layouts/ooc_page.html.liquid
@@ -14,6 +14,7 @@
   		<div class="wrapIt">
   			{% include 'layout/ooc_breadcrumb' %}
 				{{ content_for_layout }}
+				<div class="clearAll"></div>
 			</div>
 		</div>
 	</main>
