--- a/app/views/pages/repeat-customers.html.liquid
+++ b/app/views/pages/repeat-customers.html.liquid
@@ -1,121 +1,15 @@
 ---
 slug: online/repeat-customers
-layout_name: ooc_page
+layout_name: ooc_page_2col
 metadata:
   pagetitle: Digital Marketing Strategist
   title: Increasing Frequency of Repeat Sales from Existing Customers
 ---
-<div class="contentL">
-        
-
-
-    
-
-    
-        <p>Another area of work that is missed, by the majority of businesses is the monitoring and building of repeat customers. </p>
-        <p>
-            Ensuring you are consistently improving the number of repeat customers helps to check that the service or products you are offering are successful, and
-            it is considered as much as 5x easier to encourage these people back than try to find new customers.</p>
-        <p>
-            There are a few businesses that do not have the option of a repeat customer, but that does not mean that a good communication plan after the sale should
-            be ignored. In fact, it is probably more important in helping your business grow through simple methods that can help your customer and your
-            business.</p>
-    
-
-</div>
-<div class="contentR">
-  <div class="learnBox">
-    <h2>Learn More</h2>
-    <p>Book a no obligation chat<br>
-      to find out more:
-    </p>
-    <a name="down"></a>
-    <form name="catwebformform2697" method="post" onsubmit="return checkWholeForm2697(this)" enctype="multipart/form-data" action="/FormProcessv2.aspx?WebFormID=44462&amp;OID=6220536&amp;OTYPE=1&amp;EID=0&amp;CID=0">
-      <table class="webform" cellspacing="0" cellpadding="2" border="0">
-        <tbody>
-          <tr>
-            <td><label for="FirstName">First Name <span class="req">*</span></label><br>
-              <input type="text" name="FirstName" id="FirstName" class="cat_textbox" maxlength="255"> </td>
-          </tr>
-          <tr>
-            <td><label for="LastName">Last Name <span class="req">*</span></label><br>
-              <input type="text" name="LastName" id="LastName" class="cat_textbox" maxlength="255"> </td>
-          </tr>
-          <tr>
-            <td><label for="EmailAddress">Email Address <span class="req">*</span></label><br>
-              <input type="text" name="EmailAddress" id="EmailAddress" class="cat_textbox" maxlength="255"> </td>
-          </tr>
-          <tr>
-            <td><label for="HomePhone">Phone Number</label><br>
-              <input type="text" name="HomePhone" id="HomePhone" class="cat_textbox" maxlength="255"></td>
-          </tr>
-          <tr>
-            <td><input type="hidden" maxlength="4000" name="CAT_Custom_276590" id="CAT_Custom_276590" class="cat_textbox"><label for="CAT_Custom_276668">Preferred Time</label><br>
-              <textarea name="CAT_Custom_276668" id="CAT_Custom_276668" cols="10" rows="4" class="cat_listbox" onkeydown="if(this.value.length>=4000)this.value=this.value.substring(0,3999);"></textarea></td>
-          </tr>
-          <tr>
-            <td><label>Enter Word Verification in box below <span class="req">*</span></label><br>
-              <script type="text/javascript" src="/CatalystScripts/ValidationFunctions.js?vs=b339.r524375-phase1"></script>
-              <script>
-              function reCaptchaV2OnLoad() { reCaptchaV2Manager.onLoadHandler(); }
-              </script>
-              <script>
-              document.write('<scr' + 'ipt type="text/javascript" src="https://www.google.com/recaptcha/api.js?onload=reCaptchaV2OnLoad&render=explicit" async defer></scri' + 'pt>');
-              </script>
-              <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?onload=reCaptchaV2OnLoad&amp;render=explicit" async="" defer=""></script>
-              <script>
-                reCaptchaV2Manager.registerInstance({
-        'id': '5a74d8f65d224b39960be85cf643f165',
-        'sitekey': '6LcGXxsUAAAAALhWpOesJevjsD2KnvmZbTZADnIJ',
-        'type': 'image',
-        'theme': 'white',
-        'size': 'normal'
-    });
-</script>
-              <input id="token5a74d8f65d224b39960be85cf643f165" type="hidden" data-recaptcha-id="5a74d8f65d224b39960be85cf643f165" name="bc-recaptcha-token" value="YRkepAKKFwic4H7ewixa0T7NGIv1W68lMGyQWtNtR_XyxoSztzge31Z9nq2ILoB_LV3IjJKh9qS2Kdn4QTSiJb0txuBKuYzQoGS043qQbdg">
-              <div id="recaptcha5a74d8f65d224b39960be85cf643f165" class="g-recaptcha">
-                <div style="width: 304px; height: 78px;">
-                  <div><iframe src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6LcGXxsUAAAAALhWpOesJevjsD2KnvmZbTZADnIJ&amp;co=aHR0cHM6Ly93d3cub25lb3JhbmdlY293LmNvbTo0NDM.&amp;hl=in&amp;type=image&amp;v=v1565591531251&amp;theme=white&amp;size=normal&amp;cb=b05dd9mgq01v" width="304" height="78" role="presentation" name="a-bmejj4oeci3n" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox"></iframe></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea>
-                </div>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div style="display: none">
-                <input type="text" name="s_content" id="s_content" class="cat_textbox">
-                <input type="text" name="s_summary" id="s_summary" class="cat_textbox" value="35d3ad7175db40cea1b5f0b092f23dcc">
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td> <span class="req">*</span> Required<br>
-              <input class="cat_button" type="submit" value="Submit" id="catwebformbutton"></td>
-          </tr>
-        </tbody>
-      </table>
-      <script type="text/javascript" src="/CatalystScripts/ValidationFunctions.js?vs=b339.r524375-phase1"></script>
-      <script type="text/javascript">
-      //<![CDATA[
-      var submitcount2697 = 0;
-
-      function checkWholeForm2697(theForm) {
-        var why = "";
-        document.getElementById("CAT_Custom_276590").value = window.location.pathname;
-        if (theForm.FirstName) why += isEmpty(theForm.FirstName.value, "First Name");
-        if (theForm.LastName) why += isEmpty(theForm.LastName.value, "Last Name");
-        if (theForm.EmailAddress) why += checkEmail(theForm.EmailAddress.value);
-        if (theForm.CaptchaV2) why += captchaIsInvalid(theForm, "Enter Word Verification in box below", "Please enter the correct Word Verification as seen in the image");
-        if (why != "") { alert(why); return false; }
-        if (submitcount2697 == 0) {
-          submitcount2697++;
-          theForm.submit();
-          return false;
-        } else { alert("Form submission is in progress."); return false; }
-      }
-      //]]>
-      </script>
-    </form>
-  </div>
-</div>
-<div class="clearAll"></div>
+<p>Another area of work that is missed, by the majority of businesses is the monitoring and building of repeat customers. </p>
+<p>
+  Ensuring you are consistently improving the number of repeat customers helps to check that the service or products you are offering are successful, and
+  it is considered as much as 5x easier to encourage these people back than try to find new customers.</p>
+<p>
+  There are a few businesses that do not have the option of a repeat customer, but that does not mean that a good communication plan after the sale should
+  be ignored. In fact, it is probably more important in helping your business grow through simple methods that can help your customer and your
+  business.</p>
